# gamess

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  configure.sh
gl/include/glad/: gl.h
res/shaders/: main.frag  main.vert  tile.frag  tile.vert
src/: main.cpp
src/game/: game.cpp  game.hpp
src/game/render/: buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex_array.cpp  vertex_array.hpp
src/game/utils/: lru_cache.hpp
src/game/world/: tile.hpp  world.cpp  world.hpp  world_generator.cpp  world_generator.hpp
tests/: CMakeLists.txt
tests/src/game/tests/: test_lru_cache.cpp  test_main.cpp
